--- a/python-ssh/requirements.txt
+++ b/python-ssh/requirements.txt
@@ -1,8 +1,15 @@
-Django==5.1.2
 asgiref==3.8.1
+boto3==1.35.41
+botocore==1.35.41
 Django==5.1.2
+django-storages==1.14.4
+jmespath==1.0.1
 pip==24.2
+python-dateutil==2.9.0.post0
+s3transfer==0.10.3
 setuptools==65.5.1
+six==1.16.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
+urllib3==2.2.3
 wheel==0.44.0
