#3 Правки. Разобрался с синхронизацией и отказался от неё. Скипт на прокидывание прав на папку app

--- a/python-ssh/docker-compose.yml
+++ b/python-ssh/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     volumes:
       - ./app:/app
       - ./requirements.txt:/requirements.txt
+      - ./start.sh:/start.sh
     networks:
       python-ssh-net:
         ipv4_address: 172.28.1.2
@@ -12,6 +13,7 @@ services:
       - "2222:22"
       - "8000:8000"
     tty: true
+    command: "/bin/sh start.sh"
 
 networks:
   python-ssh-net:
