--- a/python-ssh/docker-compose.yml
+++ b/python-ssh/docker-compose.yml
@@ -13,7 +13,23 @@ services:
       - "2222:22"
       - "8000:8000"
     tty: true
-    command: "/bin/sh start.sh"
+    command: >
+      sh -c "python /app/S3App/manage.py migrate && python /app/S3App/manage.py runserver 0.0.0.0:8000"
+
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    volumes:
+      - ./data:/data
+    environment:
+      MINIO_ROOT_USER: minio_root_user
+      MINIO_ROOT_PASSWORD: minio_root_user
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    command: server /data --console-address ":9001"
+    networks:
+      python-ssh-net:
 
 networks:
   python-ssh-net:
